--- a/global-styles.css
+++ b/global-styles.css
@@ -1,14 +1,16 @@
+html {
+  background-color: #000;
+}
+@media screen and (min-width:900px) {
+ html {
+  background-color: #ee4444
+ }
+}
+
 body {
-  background: #000;
   font-family: sans-serif;
   padding: 0;
   margin: 0;
-}
-
-@media screen and (min-width: 900px) {
-  body {
-    background: linear-gradient(90deg, #050505, #050505, #e44 200px);
-  }
 }
 
 .posterText {
